--- a/mercadito/Templates/Facturas/factura_listado.html
+++ b/mercadito/Templates/Facturas/factura_listado.html
@@ -1,18 +1,73 @@
-<a href="{% url 'factura_crear'%}">Nuevo</a>
-<table>
-        <tr>
-            <th>Editar</th>
-            <th>Eliminar</th>
-            <th>id</th>
-            <th>Nombre</th>
-            
-        </tr>
-        {% for data in object_list %}
-        <tr>
-            <td><a href="{% url 'factura_edit' data.idFactura %}">Editar</a></td>
-            <td><a href="{% url 'factura_eliminar' data.idFactura %}">Eliminar</a></td>
-            <td>{{data.idFactura}}</td>
-            <td>{{data.nombreCliente}}</td>
-         </tr>
-          {% endfor %}
-     </table>
+{% extends "base/base.html" %}
+{% block titulo %}
+  Listado de Facturas
+{%endblock titulo%}
+{% block contenido %}
+<div>
+    <a href="{% url 'cliente_crear'%}" class="btn btn-succes">Nuevo</a>
+</div>
+<div class ='card'>
+    <div class="card-header">
+        Listado de Facturas
+    </div>  
+    <div class="card-body">
+        <table id ="Empleados" class="table table-striped" style ="width: 100%;">
+            <thead>
+                <tr>
+                    <th>Editar</th>
+                    <th>Eliminar</th>
+                    <th>id factura</th>
+                    <th>Nombre del cliente</th>
+                    <th>id Producto</th>
+                    <th>id del empleado</th>
+                    <th>sub total</th>
+                    <th>total</th>
+                    <th>Metodo de pago</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for data in object_list %}
+                <tr>
+                    <td><a href="{% url 'factura_edit' data.idFactura %}" class="btn btn-info">Editar</a></td>
+                    <td><a href="{% url 'factura_eliminar' data.idFactura %}" class="btn btn-danger">Eliminar</a></td>
+                    <td>{{data.idFactura}}</td>
+                    <td>{{data.nombreCliente}}</td>
+                    <td>{{data.idProducto}}</td>
+                    <td>{{data.idEmpleado}}</td>
+                    <td>{{data.Subtotal}}</td>
+                    <td>{{data.Total}}</td>
+                    <td>{{data.MetodoPago}}</td>
+
+                 </tr>
+                  {% endfor %}
+            </tbody>
+         </table>
+    </div>
+</div>
+{% endblock contenido %}
+{% block js_page%}
+   
+<script>
+    $(document).ready(function() {
+              $('#Facturas').DataTable( {
+          paging:true,
+          scrollY:true,
+          scrollX:true,
+          scrollCollapse:true,
+          pagingType: 'full_numbers',
+          dom: 'Blfrtip',
+          buttons: [
+              'copy', 'csv', 'excel', 'pdf', 'print'
+          ],
+          lengthMenu: [
+                          [ 10, 25, 50, -1 ],
+                          [ '10 Filas', '25 Filas ', '50 Filas', 'Mostrar todo' ]
+                      ],
+          "language": {
+              "url": "//cdn.datatables.net/plug-ins/1.12.1/i18n/es-ES.json"
+          }});
+          });
+  
+  </script>
+  {% endblock js_page %}
+
