--- a/mercadito/Templates/Facturas/formFactura.html
+++ b/mercadito/Templates/Facturas/formFactura.html
@@ -1,5 +1,73 @@
+{% extends "base/base.html" %}
+{% block titulo %}
+  Nuevo Factura
+{%endblock titulo%}
+{% block contenido %}
+<div class="card">
+    <div class="card-header">
+      Nueva factura
+    </div>
+    <div class="card-body">
 <form method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit">Guardar</button>
-</form>
+   {% csrf_token %}
+            
+            <div class="form-group row">
+                <div class="form-group col-sm-12">
+                    <label for="name">Codigo de Factura: </label>
+                     <div class="input-group">
+                       <div class="input-group-addon"><i class="fa fa-user fa-lg text-info" aria-hidden="true"></i></div>
+                            {{ form.idFactura}} 
+                    </div>
+                </div>
+             
+        
+                <div class="form-group col-sm-12">
+                    <label for="name">Nombre de Comprador: </label>
+                    <div class="input-group">
+                        <div class="input-group-addon"><i class="fa fa-user fa-lg text-info" aria-hidden="true"></i></div>
+                            {{ form.nombreCliente}}
+                    </div>
+                </div>
+
+                <div class="form-group col-sm-12">
+                    <label for="name">idProducto: </label>
+                    <div class="input-group">
+                        <div class="input-group-addon"><i class="fa fa-user fa-lg text-info" aria-hidden="true"></i></div>
+                            {{ form.idProducto}}
+                    </div>
+                </div>
+                <div class="form-group col-sm-12">
+                    <label for="name">idEmpleado: </label>
+                    <div class="input-group">
+                        <div class="input-group-addon"><i class="fa fa-user fa-lg text-info" aria-hidden="true"></i></div>
+                            {{ form.idEmpleado}}
+                    </div>
+                </div>
+                
+                <div class="form-group col-sm-12">
+                    <label for="name">subtotal: </label>
+                    <div class="input-group">
+                        <div class="input-group-addon"><i class="fa fa-user fa-lg text-info" aria-hidden="true"></i></div>
+                            {{ form.Subtotal}}
+                    </div>
+                </div>
+                <div class="form-group col-sm-12">
+                    <label for="name">Total: </label>
+                    <div class="input-group">
+                        <div class="input-group-addon"><i class="fa fa-user fa-lg text-info" aria-hidden="true"></i></div>
+                            {{ form.Total}}
+                    </div>
+                </div>
+                <div class="form-group col-sm-12">
+                    <label for="name">Metodo de pago: </label>
+                    <div class="input-group">
+                        <div class="input-group-addon"><i class="fa fa-user fa-lg text-info" aria-hidden="true"></i></div>
+                            {{ form.MetodoPago}}
+                    </div>
+                </div>
+            </div>
+            <button type="submit" value="Submit" class="btn btn-success btn-lg btn-block">Guardar</button>
+        </form>
+    </div>
+</div>     
+{% endblock contenido %}
