--- a/mercadito/Templates/Producto/formProducto.html
+++ b/mercadito/Templates/Producto/formProducto.html
@@ -1,5 +1,66 @@
+{% extends "base/base.html" %}
+{% block titulo %}
+  Nuevo Producto
+{%endblock titulo%}
+{% block contenido %}
+<div class="card">
+    <div class="card-header">
+      Nuevo Producto
+    </div>
+    <div class="card-body">
 <form method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit">Guardar</button>
-</form>
+   {% csrf_token %}
+            
+            <div class="form-group row">
+                <div class="form-group col-sm-12">
+                    <label for="name">Codigo de Producto: </label>
+                     <div class="input-group">
+                       <div class="input-group-addon"><i class="fa fa-user fa-lg text-info" aria-hidden="true"></i></div>
+                            {{ form.idProducto}} 
+                    </div>
+                </div>
+             
+        
+                <div class="form-group col-sm-12">
+                    <label for="name">Nombre de Producto: </label>
+                    <div class="input-group">
+                        <div class="input-group-addon"><i class="fa fa-user fa-lg text-info" aria-hidden="true"></i></div>
+                            {{ form.nombreProducto}}
+                    </div>
+                </div>
+
+                <div class="form-group col-sm-12">
+                    <label for="name">id Proveedor: </label>
+                    <div class="input-group">
+                        <div class="input-group-addon"><i class="fa fa-user fa-lg text-info" aria-hidden="true"></i></div>
+                            {{ form.idProveedor}}
+                    </div>
+                </div>
+                
+                <div class="form-group col-sm-12">
+                    <label for="name">Descripcion del producto: </label>
+                    <div class="input-group">
+                        <div class="input-group-addon"><i class="fa fa-user fa-lg text-info" aria-hidden="true"></i></div>
+                            {{ form.ProductoDescripcion}}
+                    </div>
+                </div>
+                <div class="form-group col-sm-12">
+                    <label for="name">Precio del producto: </label>
+                    <div class="input-group">
+                        <div class="input-group-addon"><i class="fa fa-user fa-lg text-info" aria-hidden="true"></i></div>
+                            {{ form.ProductoPrecio}}
+                    </div>
+                </div>
+                <div class="form-group col-sm-12">
+                    <label for="name">Inventario: </label>
+                    <div class="input-group">
+                        <div class="input-group-addon"><i class="fa fa-user fa-lg text-info" aria-hidden="true"></i></div>
+                            {{ form.Inventario}}
+                    </div>
+                </div>
+            </div>
+            <button type="submit" value="Submit" class="btn btn-success btn-lg btn-block">Guardar</button>
+        </form>
+    </div>
+</div>     
+{% endblock contenido %}
